Align center card with fixed height

--- a/home/src/App.css
+++ b/home/src/App.css
@@ -1,12 +1,26 @@
 .Title-Style {
   text-align: center;
   color: black;
-  font-size: 48px;
   padding: 24px;
   background-color: gray;
 }
 
-img {
-  width: 200px;
-  height: 200px;
+.Title {
+  text-align: center;
+  font-size: 48px;
+}
+
+.card {
+  min-height: 200px;
+  max-width: 500px;
+}
+
+.card-deck {
+  margin: 24px;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 40vh;
+  object-fit: cover;
 }
